--- a/src/app/cus-message/cus-message.component.html
+++ b/src/app/cus-message/cus-message.component.html
@@ -1,4 +1,11 @@
-<h1 mat-dialog-title>{{ config.title }}</h1>
-<div mat-dialog-content>
+<h3 mat-dialog-title class="cus-title">
+  <i class="material-icons">face</i>{{ config.title }}
+  <hr/>
+</h3>
+<mat-dialog-content class="cus-content">
+  
   {{ config.msg }}
-</div>
+</mat-dialog-content>
+<mat-dialog-actions align="center">
+  <button mat-dialog-close mat-raised-button color="warn">關閉</button>
+</mat-dialog-actions>
